--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@polkadot/api": "^1.3.1",
     "@polkadot/extension-dapp": "^0.21.1",
     "bignumber.js": "^9.0.0",
+    "clipboard-polyfill": "^2.8.6",
     "jdenticon": "^2.2.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
