--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "@nuxtjs/pwa": "^3.0.0-0",
     "@polkadot/api": "^1.3.1",
     "@polkadot/extension-dapp": "^0.21.1",
+    "@polkadot/ui-keyring": "^0.51.1",
+    "@polkadot/ui-settings": "^0.51.1",
     "bignumber.js": "^9.0.0",
     "clipboard-polyfill": "^2.8.6",
+    "cookie-universal-nuxt": "^2.1.2",
+    "file-saver": "^2.0.2",
     "jdenticon": "^2.2.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
