--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
     "nuxt": "^2.2.13",
+    "nuxt-winston-log": "^1.1.0",
     "qrcode": "^1.4.4",
     "sha256": "^0.2.0",
     "vue-i18n": "^8.15.3",
